--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,15 @@
 body {
-  background-color: #818a9c;
   font-family: sans-serif
+  height: 1000px;
+  background-image: linear-gradient(blue, darkblue);
+  
 }
 
 h1 {
   text-align: center;
   font-size: 2em;
   padding: 30px;
-  color: rgb(43, 76, 226);
+  color: rgb(42, 4, 126);
   font-family: cursive;
   float: none;
 }
